--- a/front/src/components/pageContent.css
+++ b/front/src/components/pageContent.css
@@ -17,7 +17,7 @@
 }
 
 .actions-margin button:hover{
-    background-color: paleturquoise;
+    background-color: lightslategray;
 }
 
 .main-content{
